--- a/molecule/containerd/verify.yml
+++ b/molecule/containerd/verify.yml
@@ -3,6 +3,7 @@
 
 - name: Verify
   hosts: all
+  become: true
   roles:
     - vexxhost.containers.cni_plugins
     - vexxhost.containers.cri_tools
