--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -30,10 +30,10 @@ provisioner:
       pipelining: true
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
-    privilege_escalation:
-      become: true
   inventory:
-    links:
-      group_vars: "${MOLECULE_SCENARIO_DIRECTORY}/group_vars"
+    group_vars:
+      all:
+        ansible_become: true
+        docker_version: 24.0.9
 verifier:
   name: ansible
