--- a/molecule/download-binaries/molecule.yml
+++ b/molecule/download-binaries/molecule.yml
@@ -30,7 +30,9 @@ provisioner:
       pipelining: true
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
-    privilege_escalation:
-      become: true
+  inventory:
+    group_vars:
+      all:
+        ansible_become: true
 verifier:
   name: ansible
